--- a/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
+++ b/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
-<p>เบื่อที่จะรักเบื่อที่จะทักใคร</p>
-<p>ผิดที่ฝากฟ้า</p>
-<p>เบื่อตอนที่เมฆมาา</p>
+<p>กลัวมันจะเป็นเพลงรักที่เธอนั้นมองผ่าน</p>
+<p>เป็นบทเพลงหวานๆที่มีความหมาย</p>
+<p>กลัวเธอจะไม่ซึ้งถึงข้อความที่สวยงามสักเท่าไหร่</p>
+<p>เพลงของเธอต้องตั้งใจฟัง</p>
 </div>
