เปลี่ยนเนื้อเพลงพี่โตใหม่อีกรอบ

--- a/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
+++ b/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
 <p>เบื่อที่จะรักเบื่อที่จะทักใคร</p>
-<p>ผิดที่ฝากฟ้า</p>
+<p>เบื่อหน้าตัวเองในกระจกใสไม่รู้ใครๆนั้นเคยเป็นไหม</p>
 <p>เบื่อตอนที่เมฆมาา</p>
 </div>
