ต่อเพลงพี่โตอีกบรรทัด

--- a/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
+++ b/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
@@ -2,4 +2,5 @@
 <p>เบื่อที่จะรักเบื่อที่จะทักใคร</p>
 <p>เบื่อหน้าตัวเองในกระจกใสไม่รู้ใครๆนั้นเคยเป็นไหม</p>
 <p>เบื่อตอนที่เมฆมาา</p>
+<p>ทำท่าเหมือนมันคงจะมีฝน แค่มืดลงเลยต้องทนร้อน</p>
 </div>
