--- a/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
+++ b/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
@@ -4,3 +4,10 @@
 <p>กลัวเธอจะไม่ซึ้งถึงข้อความที่สวยงามสักเท่าไหร่</p>
 <p>เพลงของเธอต้องตั้งใจฟัง</p>
 </div>
+<ul class="nav ">
+    <li class="nav-item"><a href="#" class="nav-link">เมนู</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">เกี่ยวกับเรา</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">ติดต่อ</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">หน้าหลัก</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">ออกจากระบบ</a></li>
+</ul>
