--- a/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
+++ b/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
@@ -5,7 +5,7 @@
 <p>เพลงของเธอต้องตั้งใจฟัง</p>
 </div>
 <ul class="nav ">
-    <li class="nav-item"><a href="#" class="nav-link">เมนู</a></li>
+    <li class="nav-item"><a href="#" class="nav-link">เมนูทั้งหมด</a></li>
     <li class="nav-item"><a href="#" class="nav-link">เกี่ยวกับเรา</a></li>
     <li class="nav-item"><a href="#" class="nav-link">หน้าหลัก</a></li>
     <li class="nav-item"><a href="#" class="nav-link">ออกจากระบบ</a></li>
