--- a/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
+++ b/src/app/Content/newemployeedetial5/newemployeedetial5.component.html
@@ -10,3 +10,4 @@
     <li class="nav-item"><a href="#" class="nav-link">หน้าหลัก</a></li>
     <li class="nav-item"><a href="#" class="nav-link">ออกจากระบบ</a></li>
 </ul>
+<p>นิดหน่อย</p>
